@@ -25,6 +25,6 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. }}}
  */
 
-#define HAVE_LIBREADLINE        @HAVE_LIBREADLINE@
-#define HAVE_STRCASECMP         @HAVE_STRCASECMP@
+#cmakedefine HAVE_LIBREADLINE
+#cmakedefine HAVE_STRCASECMP
 
